css/master.css
@import url( http:////fonts.googleapis.com/css?family=Alegreya:400italic,700italic,400,700|Alegreya+SC:400,700|Inconsolata);

* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    background-color: #fff;
    padding: 0;
    margin: 0;
    width: 100%}
body {
    width: 100%;
    height: 100%;
    padding: 1em;
    margin: 0;
    font-family: "Alegreya",  Palatino,  Georgia,  serif;
    color: #444;
}
pre {
    background-color: #eee;
    padding: 1ex;
    white-space: pre-wrap;
    word-wrap: break-word;
}
pre code {
    font-size: 0.9em;
}
code {
    font-family: "Inconsolata", monospace;
}
a {
    color: #fc263a;
    -webkit-transition: all 0.25s;
    -moz-transition: all 0.25s;
    -o-transition: all 0.25s;
    transition: all 0.25s;
}
a:hover, a:visited:hover {
    color: #b90314;
}
a:visited {
    color: #fd717f;
}
.content {
    padding: 0.809em;
    max-width: 30em;
    margin: auto;
}
.site-header {
    margin-bottom: 2em;
    border-bottom: 1px solid #eee;
    text-align: center;
}
.site-header h1, .site-header nav {
    display: inline-block;
}
.site-header h1 {
    font-size: 2em;
    margin-right: 1em;
}
.site-header h1 a {
    color: #aaa;
}
.site-header nav {
    font-weight: normal;
    color: #ccc;
    font-size: 1em;
}
.site-header nav a {
    display: inline-block;
    color: #ccc;
    text-decoration: none;
}
.site-header nav a:not(:last-child) {
    margin-right: 1em;
}
.site-header nav a:hover {
    text-decoration: underline;
}

.site-footer {
    margin-top: 4em;
    margin-bottom: 2em;
    border-top: 1px solid #eee;
    text-align: center;
}
.site-footer p {
    color: #888;
    font-style: italic;
}
.content h1, .content h2, .content h3, .content h4, .content h5 {
    font-weight: normal;
    margin-top: 2em;
    color: black;
}
.content h1, .content h2 {
    font-size: 1.5em;
}
.content h3 {
    font-family: "Alegreya SC",  Palatino,  Georgia,  serif;
    font-weight: normal;
    text-transform: lowercase;
}
.content h4 {
    font-size: 1em;
    font-style: italic;
}
.content h5 {
    font-style: normal;
}
.content ul, .content ol {
    list-style-position: outside;
    padding: 0;
}
.content blockquote {
    margin: 0;
    padding-left: 1em;
    border-left: 1px solid #aaa;
}
.content img, .content object, .content video, .content audio, .content figure, .content iframe {
    max-width: 100%}
@media all and (min-width: 33.236em) {
    .content {
    padding: 1.618em;
    margin: 0 auto;
    max-width: 45rem;
    font-size: 1.25em;
}
}@media all and (min-width: 33.236em) and screen and (min-width: 30em) and (max-width: 63.236em) {
    .content {
    width: 30em;
}
}
.posthead {
    position: relative;
    padding-left: 6rem;
}
.posthead  h1 {
    display: inline-block;
    margin: 0;
    vertical-align: top;
}
.meta {
    color: #888;
    font-size: 0.8em;
    font-style: italic;
}
.posthead time {
    position: absolute;
    top: 1ex;
    left: 0;
    font-family: "Inconsolata", sans-serif;
    text-align: center;
    background-color: #eee;
    width: 5rem;
    height: 5rem;
    text-transform: uppercase;
    display: inline-block;
}
.posthead time span{
    display: block;
}
.posthead time .m, .posthead time .y {
    font-size: 1.3rem;
}
.posthead time .d {
    font-size: 2rem;
}

